--- a/jekyll/_includes/breadcrumb.html
+++ b/jekyll/_includes/breadcrumb.html
@@ -1,6 +1,6 @@
 {% if page.breadcrumb != false %}
 	<ol class="breadcrumb">
-		<li><a href="/">home</a></li>
-		<li><a href='#'>weiter</a></li>
+		<li><a href="{{ site.baseurl | prepend: site.url }}/index.html">{{ site.data.i18n.locales[site.locale].index }}</a></li>
+		<li><a href='#'>todo</a></li>
 	</ol>
 {% endif %}
