--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
 
-	<meta charset="utf-8">
+	<meta charset="{{ site.encoding }}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,15 +10,18 @@
 	<title>{{ page.title }} | {{ site.title }}</title>
 
 	<!-- Bootstrap Core CSS -->
-	<link href="{{ '/css/bootstrap-3.3.6.min.css' | prepend: site.baseurl }}" rel="stylesheet">
+	<link href="{{ '/css/bootstrap-3.3.6.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 	<!-- Custom CSS -->
-	<link href="{{ '/css/modern-business.css' | prepend: site.baseurl }}" rel="stylesheet">
+	<link href="{{ '/css/modern-business.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 	<!-- Custom Fonts -->
 	<link href="{{ '/css/font-awesome-4.6.3.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
-	<!-- Eigenes CSS -->
-	<link href="{{ '/css/local.css' | prepend: site.baseurl }}" rel="stylesheet">
+	<!-- Jekyll-mb CSS -->
+	<link href="{{ '/css/jekyll-mb.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
+
+	<!-- Local CSS -->
+	<link href="{{ '/css/local.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 </head>
