icon and footer

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -9,6 +9,8 @@
 
 	<title>{{ page.title }} | {{ site.title }}</title>
 
+	<link href="{{ '/icon.png' | prepend: '/' | prepend: site.dir_img | prepend: site.baseurl }}" rel="icon">
+
 	<!-- Bootstrap Core CSS -->
 	<link href="{{ '/css/bootstrap-3.3.6.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
