--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -1,9 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="row">
-	<div class="col-lg-12">
-		{{ content }}
-	</div>
-</div>
+{{ content }}
