cat/tag output with optional param

--- a/jekyll/_includes/well_categories.html
+++ b/jekyll/_includes/well_categories.html
@@ -38,7 +38,7 @@ The purpose of this snippet is to list all the categories you have in your site.
 <div class="well">
 	<h4>{{ site.data.i18n.locales[site.locale].categories }}</h4>
 
-	{% if site.sidebar_categories_columns %}
+	{% if include.columns or ((include.columns == nil) and site.sidebar_categories_columns) %}
 
 		<div class="row">
 			<div class="col-lg-6">
