--- a/jekyll/_includes/search.html
+++ b/jekyll/_includes/search.html
@@ -1,5 +1,4 @@
-<div class="well">
-	<h4>{{ site.data.i18n.locales[site.locale].search }}</h4>
+<div>
 	<div class="input-group">
 		<input type="text" class="form-control">
 		<span class="input-group-btn">
