--- a/jekyll/_includes/tags.html
+++ b/jekyll/_includes/tags.html
@@ -35,8 +35,7 @@ The purpose of this snippet is to list all the tags you have in your site.
 =======================
 {% endcomment %}
 
-<div class="well">
-	<h4>{{ site.data.i18n.locales[site.locale].tags }}</h4>
+<div>
 
 	{% if include.columns or ((include.columns == nil) and site.sidebar_tags_columns) %}
 
@@ -46,7 +45,7 @@ The purpose of this snippet is to list all the tags you have in your site.
 					{% for tag in tags %}
 						{% assign show = forloop.index0 | modulo: 2 %}
 						{% if show == 0 %}
-							<li><a href="#{{ tag | slugify }}"> {{ tag }} </a></li>
+							<li><a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a></li>
 						{% endif %}
 					{% endfor %}
 				</ul>
@@ -56,7 +55,7 @@ The purpose of this snippet is to list all the tags you have in your site.
 					{% for tag in tags %}
 						{% assign show = forloop.index0 | modulo: 2 %}
 						{% if show == 1 %}
-							<li><a href="#{{ tag | slugify }}"> {{ tag }} </a></li>
+							<li><a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a></li>
 						{% endif %}
 					{% endfor %}
 				</ul>
@@ -67,7 +66,7 @@ The purpose of this snippet is to list all the tags you have in your site.
 
 		|
 		{% for tag in tags %}
-			<a href="#{{ tag | slugify }}"> {{ tag }} </a> |
+			<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a> |
 		{% endfor %}
 
 	{% endif %}
