--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -6,3 +6,11 @@ layout: page
 
 {{ content }}
 
+<div class="PageNavigation">
+	{% if page.previous.url %}
+		<a class="prev" href="{{ page.previous.url | prepend: site.baseurl }}">« {{page.previous.title}}</a>
+	{% endif %}
+	{% if page.next.url %}
+		<a class="next" href="{{ page.next.url | prepend: site.baseurl }}">{{page.next.title}} »</a>
+	{% endif %}
+</div>
