--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -6,6 +6,15 @@ layout: page
 
 {{ content }}
 
+<p>
+Tags:
+{% for tag in page.tags %}
+	<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
+{% endfor %}
+</p>
+
+<hr />
+
 <div class="PageNavigation">
 	{% if page.previous.url %}
 		<a class="prev" href="{{ page.previous.url | prepend: site.baseurl }}">« {{page.previous.title}}</a>
