tags only if needed

--- a/jekyll/_includes/categories_out.html
+++ b/jekyll/_includes/categories_out.html
@@ -1,11 +1,7 @@
 {% comment %}
 Code inspired by https://codinfox.github.io/dev/2015/03/06/use-tags-and-categories-in-your-jekyll-based-github-pages/
-{% endcomment %}
 
-{% comment %}
-=======================
-The purpose of this snippet is to list all the categories you have in your site.
-=======================
+List all categories you have in your site.
 {% endcomment %}
 
 <div>
