--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -30,10 +30,13 @@ layout: default
 			</div>
 		{% endif %}
 
-		<div class="well">
-			<h4>{{ site.data.i18n.locales[site.locale].tags }}</h4>
-			{% include tags_out.html %}
-		</div>
+		{% include tags_get.html %}
+		{% if tags.size > 0 %}
+			<div class="well">
+				<h4>{{ site.data.i18n.locales[site.locale].tags }}</h4>
+				{% include tags_out.html %}
+			</div>
+		{% endif %}
 
 	</div>
 </div>
