--- a/jekyll/_includes/search.html
+++ b/jekyll/_includes/search.html
@@ -1,8 +1,13 @@
 <div>
-	<div class="input-group">
-		<input type="text" class="form-control">
-		<span class="input-group-btn">
-			<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-		</span>
-	</div>
+	<form class="form-horizontal" role="form" action="https://www.startpage.com/do/search" id="sitesearch" method="post" accept-charset="utf-8">
+		<div class="input-group">
+			<input type="hidden" name="query" />
+			<input type="hidden" name="language" value="deutsch" />
+			<input type="hidden" name="host" value="{{ site.url | append: site.baseurl }}" />
+			<input type="text" name="keyword" class="form-control" placeholder="{{ site.data.i18n.locales[site.locale].search-placeholder }}" />
+			<span class="input-group-btn">
+				<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+			</span>
+		</div>
+	</form>
 </div>
