--- a/jekyll/_layouts/servicepage.html
+++ b/jekyll/_layouts/servicepage.html
@@ -25,9 +25,18 @@ servicepage: list
 {% assign layouttype = page.servicepage | default: 'panels' %}
 
 <div class="row">
+{% if page.show-search %}
+	<div class="col-lg-8">
+		{{ content }}
+	</div>
+	<div class="col-lg-4">
+		{% include search.html %}
+	</div>
+{% else %}
 	<div class="col-lg-12">
 		{{ content }}
 	</div>
+{% endif %}
 </div>
 
 <div class="row">
