--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -20,10 +20,7 @@
 	<!-- Custom Fonts -->
 	<link href="{{ '/css/font-awesome-4.6.3.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
-	<!-- Jekyll-mb CSS -->
+	<!-- Jekyll-mb CSS with local additions-->
 	<link href="{{ '/css/jekyll-mb.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
-
-	<!-- Local CSS -->
-	<link href="{{ '/css/local.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 </head>
