--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="row">
-	<div class="col-lg-8">
+	<div class="col-lg-8 mb-content">
 		{{ content }}
 	</div>
-	<div class="col-lg-4">
+	<div class="col-lg-4 mb-sidebar">
 
 		<div class="well">
 			<h4>{{ site.data.i18n.locales[site.locale].search }}</h4>
