--- a/jekyll/css/jekyll-mb.scss
+++ b/jekyll/css/jekyll-mb.scss
@@ -25,7 +25,7 @@
 
 @import "local_colors";
 
-// color palettes
+// color palettes (http://paletton.com/)
 $color-primary-0: #7399AA !default;	// Main Primary color */
 $color-primary-1: #EFF9FD !default;
 $color-primary-2: #B2D1DE !default;
