started styling the results

--- a/jekyll/_layouts/searchpage.html
+++ b/jekyll/_layouts/searchpage.html
@@ -15,7 +15,8 @@ layout: default
 	</div>
 
 	<div class="col-lg-12">
-		<ul id="search-results"></ul>
+		<div class="list-group" id="search-results">
+		</div>
 	</div>
 
 </div>
