--- a/jekyll/_layouts/searchpage.html
+++ b/jekyll/_layouts/searchpage.html
@@ -22,16 +22,26 @@ layout: default
 </div>
 
 <script>
+
+	{% assign ignore_files = '/search.html' %}
+	{% if page.ignore-files %}
+		{% assign ignore_files = ignore_files | append: ',' | append: page.ignore-files %}
+	{% endif %}
+	{% assign to_ignore = ignore_files | split: ',' %}
+
 	window.store = {
-	{% for post in site.pages %}
-		"{{ post.url | slugify }}": {
-		"title": "{{ post.title | xml_escape }}",
-		"author": "{{ post.author | xml_escape }}",
-		"category": "{{ post.category | xml_escape }}",
-		"content": {{ post.content | strip_html | strip_newlines | jsonify }},
-		"url": "{{ post.url | xml_escape }}"
-		}
-		{% unless forloop.last %},{% endunless %}
+	{% for page in site.pages %}
+		{% assign extension = page.url | slice: -5, 5 %}
+		{% unless extension != '.html' or to_ignore contains page.url %}
+			"{{ page.url | slugify }}": {
+			"title": "{{ page.title | xml_escape }}",
+			"author": "{{ page.author | xml_escape }}",
+			"category": "{{ page.category | xml_escape }}",
+			"content": {{ page.content | strip_html | strip_newlines | jsonify }},
+			"url": "{{ page.url | xml_escape | prepend: site.baseurl }}"
+			}
+			{% unless forloop.last %},{% endunless %}
+		{% endunless %}
 	{% endfor %}
 	};
 </script>
