--- a/jekyll/_layouts/searchpage.html
+++ b/jekyll/_layouts/searchpage.html
@@ -9,16 +9,19 @@ layout: default
 </div>
 
 <div class="row">
-
 	<div class="col-lg-12">
 		{% include search.html %}
 	</div>
+</div>
 
+<div class="row">
 	<div class="col-lg-12">
-		<div class="list-group" id="search-results">
+		<div class="panel panel-default" id="search-result-panel">
+			<div class="panel-heading">Suchergebnisse</div>
+			<div class="panel-body" id="search-result-none"><p>Keine Suchergebnisse gefunden</p></div>
+			<div class="list-group" id="search-results"></div>
 		</div>
 	</div>
-
 </div>
 
 <script>
