--- a/jekyll/_layouts/searchpage.html
+++ b/jekyll/_layouts/searchpage.html
@@ -17,8 +17,8 @@ layout: default
 <div class="row">
 	<div class="col-lg-12">
 		<div class="panel panel-default" id="search-result-panel">
-			<div class="panel-heading">Suchergebnisse</div>
-			<div class="panel-body" id="search-result-none"><p>Keine Suchergebnisse gefunden</p></div>
+			<div class="panel-heading">{{ site.data.i18n.locales[site.locale].search-results}}</div>
+			<div class="panel-body" id="search-result-none"><p>{{ site.data.i18n.locales[site.locale].search-results-none}}</p></div>
 			<div class="list-group" id="search-results"></div>
 		</div>
 	</div>
