--- a/jekyll/_layouts/searchpage.html
+++ b/jekyll/_layouts/searchpage.html
@@ -14,6 +14,8 @@ layout: default
 	</div>
 </div>
 
+<div class="help-block"></div>
+
 <div class="row">
 	<div class="col-lg-12">
 		<div class="panel panel-default" id="search-result-panel">
